<resources>
    <string name="app_name">KalariLab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_need_permission">Please give premission to open camera</string>
    <string name="message_permission">Please give a premission to open Camera</string>
    <string name="title_go_to_setting">Go to settings</string>
    <string name="play_stop">Stop</string>
    <string name="back">back</string>
    <string name="dialog_permission_title" translatable="false">Grant Permissions</string>
    <string name="dialog_permission_message" translatable="false">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings" translatable="false">GOTO SETTINGS</string>
    <string name="error_gif" translatable="false">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="button_sure_default">Ok</string>
    <string name="button_sure">Ok(%1$d)</string>
    <string name="continueS">Continue</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="so_that_we_know_how_to_call_you">So that we know how to call you.</string>
    <string name="write_post_or_a_question">Write a post or ask a question.</string>
    <string-array name="occupations">
        <item>Student</item>
        <item>Tutor</item>
        <item>Tutor and Student</item>
    </string-array>
    <string-array name="warnings">
        <item>Full Name Is Required!</item>
        <item>Email Is Required!</item>
        <item>Please Provide Valid Email!</item>
        <item>Password Is Required!</item>
        <item>Password is short!</item>
        <item>Sorry we can not find an account with this email address!
        Please try again, or create a new account.</item>
        <item>The password is incorrect!</item>
        <item>Username is required!</item>
        <item>Please provide your school name</item>
    </string-array>
    <string-array name="messages">
        <item>Check your e-mail to verify your account</item>
        <item>Check your e-mail to reset Your password</item>
        <item>This e-mail is already connected to an account!</item>
        <item>Checking username...</item>
        <item>Sorry..Username is already taken!</item>
        <item>is available.</item>
        <item>Resend verification message.</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="empty_email_field">E-mail field can not be empty.</string>
    <string name="invalid_email">Invalid E-mail.</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="empty_password">Password field can not be empty.</string>
    <string name="short_password">Password is too short.</string>

    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="Log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="facebook_app_id">4325643354229855</string>
    <string name="fb_login_protocol_scheme">fb4325643354229855</string>
    <string name="register_success">User has been registered successfully!</string>
    <string name="register_fail">Failed to register! please try again!</string>
    <string name="ok">OK.</string>
    <string name="username">Username</string>
    <string name="ASCII" translatable="false">!"#$%\'()*+-./0123456789:;=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~</string>
    <string name="next">Next</string>
    <string name="otherOptionsForSignUp">Sign up with one of the following options.</string>
    <string name="otherOptionsForLogIn">Log In with one of the following options.</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="whereWereYouBorn">Where were you born?</string>
    <string name="dateOfBirth">Date of birth.</string>
    <string name="whatIsYourGender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="sign_out">sign out</string>
    <string name="progress">Progress</string>
    <string name="posture">Postures</string>


    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Train At Home</string>
    <string name="second_slide_title">Transform your Body</string>
    <string name="third_slide_title">Build Absolute Focus</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Join the most interactive Martial Arts Academy Online </string>
    <string name="second_slide_desc">Learn exercises and techniques used for 1000s of years</string>
    <string name="third_slide_desc">increase your physical and mental productivity</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="upgrade_to_premium">upgrade to premium</string>
    <string name="shop_title">shop</string>
    <string name="settings_title">Settings</string>
    <string name="user_title"><![CDATA[user/> </menu>]]></string>
    <string name="user_title1">user</string>
    <string name="weekly_points">Weekly Points</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="personal_information">Personal Information</string>
    <string name="about_me">About Me</string>
    <string name="age">Age</string>
    <string name="Gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account">Account</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="log_out">Log Out</string>
    <string name="premium_plans">Premium Plans</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="letters">qwertyuASDFGHJKLPOIUYTREWQZXCVBNMQWERTYUIOPioplkjhgfd sazxcvbnm-_`.\'|</string>
    <string name="when_you_were_born">When you were born?</string>
    <string name="birth_date">Birth Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="points">Points</string>
    <string name="monthly">Monthly</string>
    <string name="choose_your_plan">Choose Your Plan.</string>
    <string name="activate">Activate</string>
    <string name="monthly_offer">One week free trail, then $ per month, cancel any time.</string>
    <string name="annual">Annual</string>
    <string name="annual_offer">One week free trail, then $ per year, cancel any time.</string>
    <string name="classes">Classes</string>
    <string name="levels">LEVELS</string>

</resources>