<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/KalariLabMain"
    tools:context=".ProfileNameFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/headLine"
        android:layout_width="396dp"
        android:layout_height="82dp"
        android:layout_alignStart="@+id/editTextLastNameParent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/what_is_your_name"
        android:textColor="@color/white"
        android:textSize="@dimen/FragmentHeadline_textSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headLine"
        android:layout_alignStart="@id/editTextLastNameParent"
        android:text="@string/so_that_we_know_how_to_call_you"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/profileNameFragmentSecondHeadline_textSize"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextFirstNameParent"
        style="@style/LoggingTextInputLayoutStyle"
        android:digits="@string/ASCII"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoggingTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:id="@+id/editTextFirstName"
            android:digits="qwertyuioplkjhgfd sazxcvbnm-_`.'|"
            android:layout_height="match_parent"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/warningTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFirstNameParent"
        android:layout_alignStart="@id/editTextFirstNameParent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLastNameParent"
        style="@style/LoggingTextInputLayoutStyle"
        android:digits="@string/ASCII"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_below="@id/editTextFirstNameParent"

        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoggingTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:id="@+id/editTextFLastName"
            android:layout_height="match_parent"
            android:digits="qwertyuioplkjhgf dsazxcvbnm-_`.'|"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>




</RelativeLayout>