<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/KalariLabMain"

    tools:context=".ChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:weightSum="3">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/KalariLabMain"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailParent"
        style="@style/LoggingTextInputLayoutStyle"
        android:digits="@string/ASCII"
        android:hint="@string/current_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
       android:layout_marginTop="200dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/KalariLAbSecondary"

        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoggingTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:id="@+id/editTextEmail"
            android:maxLines="1"
            android:inputType="textPassword"

            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordParent"
        android:layout_below="@+id/editTextEmailParent"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:digits="@string/ASCII"
        style="@style/LoggingTextInputLayoutStyle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/KalariLAbSecondary"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextPassword"
            android:maxLines="1"
            android:inputType="textPassword"
            style="@style/LoggingTextInputLayoutStyle"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton

        android:id="@+id/LogIn"
        style="@style/registerButtonStyle"
        android:layout_below="@+id/editTextPasswordParent"
        android:text="@string/reset_password"
        app:cornerRadius="15dp" />

</RelativeLayout>