<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/KalariLabMain"
    tools:context=".PremiumFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarParent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:layoutDirection="rtl"
            app:menu="@menu/top_app_bar"
            app:title="@string/premium_plans"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TitleTextStyle" />


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:text="@string/choose_your_plan"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/gl_monthlyCardViewsLowerBorder"
        app:layout_constraintStart_toStartOf="@id/gl_general_v"
        app:layout_constraintTop_toBottomOf="@id/gl_upperBorder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_general_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_upperBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_general_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_cardViewsUpperBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_monthlyCardViewsLowerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.cardview.widget.CardView
        android:id="@+id/monthly"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/KalariLAbSecondary"
        app:layout_constraintBottom_toTopOf="@id/gl_monthlyCardViewsLowerBorder"
        app:layout_constraintEnd_toEndOf="@id/gl_general_v1"
        app:layout_constraintStart_toStartOf="@id/gl_general_v"
        app:layout_constraintTop_toTopOf="@id/gl_cardViewsUpperBorder" />

    <TextView
        android:id="@+id/monthlyCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="3dp"
        android:text="@string/monthly"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/gl_general_v"
        app:layout_constraintTop_toTopOf="@id/monthly" />

    <Button
        android:id="@+id/monthlyActivateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/darkerGrey"
        android:elevation="3dp"
        android:text="@string/activate"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/monthly"
        app:layout_constraintTop_toTopOf="@id/monthly" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        android:text="@string/monthly_offer"
        android:textColor="@color/lightGrey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/monthly"
        app:layout_constraintTop_toBottomOf="@id/monthlyActivateBtn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Annual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/KalariLAbSecondary"
        app:layout_constraintTop_toBottomOf="@id/gl_annualCardViewsUpperBorder"
        app:layout_constraintEnd_toEndOf="@id/gl_general_v1"
        app:layout_constraintStart_toStartOf="@id/gl_general_v"
        app:layout_constraintBottom_toTopOf="@id/gl_annualCardViewsLowerBorder"
         />

    <TextView
        android:id="@+id/annualCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="3dp"
        android:text="@string/annual"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/gl_general_v"
        app:layout_constraintTop_toTopOf="@id/Annual" />

    <Button
        android:id="@+id/annualActivateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/darkerGrey"
        android:elevation="3dp"
        android:text="@string/activate"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/Annual"
        app:layout_constraintTop_toTopOf="@id/Annual" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        android:text="@string/annual_offer"
        android:textColor="@color/lightGrey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/monthly"
        app:layout_constraintTop_toBottomOf="@id/annualActivateBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_annualCardViewsUpperBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_annualCardViewsLowerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>