<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/KalariLabMain"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:weightSum="3">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/KalariLabMain"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/accountSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_card_height"
        android:layout_below="@+id/accountSettingsTitle"
        android:layout_alignStart="@+id/accountSettingsTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:id="@+id/changePasswordCard"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/darkGrey">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/change_your_password"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

   
</RelativeLayout>